# python-studies

./: pyproject.toml
pydantic/: exemplo_01.py  exemplo_02.py  pydantic.ipynb
