[tool.poetry]
name = "python-studies"
version = "0.1.0"
description = ""
authors = ["Matheus Batista <mbatista.sarti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pydantic = "^2.5.2"
ipykernel = "^6.26.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
